--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -16,6 +16,8 @@ jobs:
       # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       # 2. Check if ref is master
       - name: Check Github Ref
@@ -38,13 +40,17 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Get the latest release tag
+          # Get the latest release tag and body
           LATEST_RELEASE=$(gh release view --json tagName -q ".tagName")
           RELEASE_BODY=$(gh release view --json body -q ".body")
 
-          if [ -z "$LATEST_RELEASE" ] || [ -z "$RELEASE_BODY" ]; then
-            echo "No release information found. Skipping update."
+          if [ -z "$LATEST_RELEASE" ]; then
+            echo "No release tag found. Skipping update."
             exit 0
+          fi
+
+          if [ -z "$RELEASE_BODY" ]; then
+            RELEASE_BODY="No detailed description provided for this release."
           fi
 
           echo "Latest Release: $LATEST_RELEASE"
@@ -55,8 +61,14 @@ jobs:
           # Prepare the new changelog entry
           NEW_ENTRY="\n## [$LATEST_RELEASE] - $RELEASE_DATE\n\n$RELEASE_BODY\n\n"
 
-          # Insert the new entry at the top of the CHANGELOG.md after the header
-          sed -i "6 a $NEW_ENTRY" CHANGELOG.md
+          # Find the correct line to insert the new entry
+          INSERT_LINE=$(grep -n '^## ' CHANGELOG.md | head -n 1 | cut -d ':' -f 1)
+          if [ -z "$INSERT_LINE" ]; then
+            echo "No suitable header found in CHANGELOG.md. Skipping update."
+            exit 0
+          fi
+
+          sed -i "${INSERT_LINE}a $NEW_ENTRY" CHANGELOG.md
 
           # Commit and push changes
           git config --global user.name "GitHub Actions"
