--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -19,13 +19,19 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 2. Check if ref is master
+      # 2. Check if ref is master and update it
       - name: Check Github Ref
         run: |
-          if [[ "${GITHUB_REF}" != "refs/heads/master" ]]; then
+          CURRENT_BRANCH="${{ github.event.workflow_run.head_branch }}"
+          echo "CURRENT_BRANCH: $CURRENT_BRANCH"
+          
+          if [[ "$CURRENT_BRANCH" != "master" ]]; then
             echo "Ref is not master, its ${GITHUB_REF}. Skipping update."
             exit 0
           fi
+          
+          git fetch origin
+          git reset --hard origin/master
 
       # 3. Set up GitHub CLI with GH_TOKEN
       - name: Set up GitHub CLI
@@ -73,6 +79,8 @@ jobs:
           # Commit and push changes
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add CHANGELOG.md
+          git add .
+          echo "Files staged for commit:"
+          git status --short
           git commit -m "Update CHANGELOG.md for release $LATEST_RELEASE" || echo "No changes to commit"
-          git push || echo "Nothing to push"
+          git push origin master
