--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           fetch-depth: 0
 
+      # 1.1 Fetch the latest changes
+      - name: Fetch latest changes
+        run: |
+          git fetch origin
+          git reset --hard origin/develop
+
       # 2. Java's configuration to read Gradle
       - name: Set up JDK
         uses: actions/setup-java@v3
@@ -38,75 +44,60 @@ jobs:
           echo "Extracted VERSION_NAME=$VERSION_NAME"
           echo "VERSION_NAME=$VERSION_NAME" >> $GITHUB_ENV
 
-      # 5 Create Git Tag
+      # 5. Create Git Tag
       - name: Create Git Tag
         id: create_tag
         run: |
-          # Set up Git identity
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          CURRENT_BRANCH="${{ github.event.workflow_run.head_branch }}"
+          echo "CURRENT_BRANCH: $CURRENT_BRANCH"
+          
+          TAG_NAME="v${VERSION_NAME}
+          if [[ "$CURRENT_BRANCH" == "develop" ]]; then
+              TAG_NAME="v${VERSION_NAME}_Beta"
+          fi
 
-          git fetch --tags
-          
-          echo "GITHUB_REF:${GITHUB_REF}"
-          TAG_NAME="v${{ env.VERSION_NAME }}"
-          if [[ "${GITHUB_REF}" == "refs/heads/develop" ]]; then
-            TAG_NAME="${TAG_NAME}_Beta"
-          fi
-          
-          echo "Checking if tag $TAG_NAME exists..."
-          if git tag -l | grep -q "^${TAG_NAME}$"; then
-            echo "Tag $TAG_NAME already exists. Skipping."
+          echo "TAG_NAME before creating tag: $TAG_NAME"
+
+          if git ls-remote --tags origin | grep -q "refs/tags/$TAG_NAME"; then
+              echo "Tag $TAG_NAME already exists in the remote repository. Skipping tag creation."
           else
-            echo "Creating tag $TAG_NAME"
-            git tag -a "$TAG_NAME" -m "Release version $TAG_NAME"
-            git push origin "$TAG_NAME"
+              git tag -a "$TAG_NAME" -m "Release version $VERSION_NAME"
+              git push origin "$TAG_NAME"
           fi
-          
-          echo "TAG_NAME after creating tag:${TAG_NAME}"
-                    
-          # Export the tag name for later use
+
           echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
 
       # 6. Update README.md with the latest tag
       - name: Update README.md with latest tag
         run: |
-          # Fetch the latest tag
-          git fetch --tags
           LATEST_TAG=$(git describe --tags --abbrev=0)
-          
-          if [ -z "$LATEST_TAG" ]; then
-            echo "No tags found. Skipping update."
-            exit 0
-          fi
-
           echo "Updating README with tag: $LATEST_TAG"
-
-          # Update the badge in README.md
           sed -i "s|!\[VERSION\](.*)|![VERSION](https://img.shields.io/badge/Version-${LATEST_TAG//v/}-blue)|" README.md
-
-          # Commit and push the changes
+          
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add .
-          
           echo "Files staged for commit:"
           git status --short
           git commit -m "Update README.md with tag $LATEST_TAG" || echo "No changes to commit"
-          git push || echo "Nothing to push"
-          
-          # Export the latest tag used to coordinate with the release
-          echo "LATEST_TAG=LATEST_TAG" >> $GITHUB_ENV
 
-      # 7. Create GitHub Release
+      # 7. Push changes to the current branch (e.g., develop)
+      - name: Push changes
+        run: |
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          echo "Pushing changes to $CURRENT_BRANCH"
+          git push origin "$CURRENT_BRANCH" || echo "Nothing to push"
+
+      # 8. Create GitHub Release
       - name: Create GitHub Release
-        if: ${{ github.ref == 'refs/heads/master' }}
+        if: ${{ github.event.workflow_run.head_branch == 'master' }}
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ env.LATEST_TAG }}
-          release_name: Release ${{ env.LATEST_TAG }}
+          tag_name: ${{ env.TAG_NAME }}
+          release_name: Release ${{ env.VERSION_NAME }}
           body: ${{ env.RELEASE_BODY }}
           draft: false
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        continue-on-error: true
