--- a/.github/workflows/update-changelog.yml
+++ b/.github/workflows/update-changelog.yml
@@ -16,14 +16,22 @@ jobs:
       # 1. Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-      # 2. Check if ref is master
+      # 2. Check if ref is master and update it
       - name: Check Github Ref
         run: |
-          if [[ "${GITHUB_REF}" != "refs/heads/master" ]]; then
+          CURRENT_BRANCH="${{ github.event.workflow_run.head_branch }}"
+          echo "CURRENT_BRANCH: $CURRENT_BRANCH"
+          
+          if [[ "$CURRENT_BRANCH" != "master" ]]; then
             echo "Ref is not master, its ${GITHUB_REF}. Skipping update."
             exit 0
           fi
+          
+          git fetch origin
+          git reset --hard origin/master
 
       # 3. Set up GitHub CLI with GH_TOKEN
       - name: Set up GitHub CLI
@@ -38,13 +46,17 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Get the latest release tag
+          # Get the latest release tag and body
           LATEST_RELEASE=$(gh release view --json tagName -q ".tagName")
           RELEASE_BODY=$(gh release view --json body -q ".body")
 
-          if [ -z "$LATEST_RELEASE" ] || [ -z "$RELEASE_BODY" ]; then
-            echo "No release information found. Skipping update."
+          if [ -z "$LATEST_RELEASE" ]; then
+            echo "No release tag found. Skipping update."
             exit 0
+          fi
+
+          if [ -z "$RELEASE_BODY" ]; then
+            RELEASE_BODY="No detailed description provided for this release."
           fi
 
           echo "Latest Release: $LATEST_RELEASE"
@@ -55,12 +67,20 @@ jobs:
           # Prepare the new changelog entry
           NEW_ENTRY="\n## [$LATEST_RELEASE] - $RELEASE_DATE\n\n$RELEASE_BODY\n\n"
 
-          # Insert the new entry at the top of the CHANGELOG.md after the header
-          sed -i "6 a $NEW_ENTRY" CHANGELOG.md
+          # Find the correct line to insert the new entry
+          INSERT_LINE=$(grep -n '^## ' CHANGELOG.md | head -n 1 | cut -d ':' -f 1)
+          if [ -z "$INSERT_LINE" ]; then
+            echo "No suitable header found in CHANGELOG.md. Skipping update."
+            exit 0
+          fi
+
+          sed -i "${INSERT_LINE}a $NEW_ENTRY" CHANGELOG.md
 
           # Commit and push changes
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add CHANGELOG.md
+          git add .
+          echo "Files staged for commit:"
+          git status --short
           git commit -m "Update CHANGELOG.md for release $LATEST_RELEASE" || echo "No changes to commit"
-          git push || echo "Nothing to push"
+          git push origin master
