--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -45,7 +45,12 @@ jobs:
           echo "Files staged for commit:"
           git status --short
           git commit -m "Increment versionCode and versionName"
-          git push origin HEAD || echo "No changes to push"
+          
+          # Determine the correct branch
+          BRANCH_NAME=$(git symbolic-ref --short HEAD || echo ${{ github.event.workflow_run.head_branch }})
+          echo "Pushing changes to branch: $BRANCH_NAME"
+
+          git push origin "$BRANCH_NAME" || echo "No changes to push"
 
       # 6. Run Unit Tests
       - name: Run tests
@@ -70,4 +75,9 @@ jobs:
           echo "Files staged for commit:"
           git status --short
           git commit -m "Update status badge in README.md" || echo "No changes to commit"
-          git push origin HEAD || echo "Nothing to push"
+          
+          # Determine the correct branch
+          BRANCH_NAME=$(git symbolic-ref --short HEAD || echo ${{ github.event.workflow_run.head_branch }})
+          echo "Pushing changes to branch: $BRANCH_NAME"
+
+          git push origin "$BRANCH_NAME" || echo "No changes to push"
