--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -22,8 +22,12 @@ jobs:
       # 1.1 Fetch the latest changes
       - name: Fetch latest changes
         run: |
+          # Determine the correct branch
+          BRANCH_NAME=$(git symbolic-ref --short HEAD || echo ${{ github.event.workflow_run.head_branch }})
+          echo "Fetching changes. Branch name: $BRANCH_NAME"
+
           git fetch origin
-          git reset --hard origin/develop
+          git reset --hard origin/"$BRANCH_NAME"
 
       # 2. Java's configuration to read Gradle
       - name: Set up JDK
@@ -85,10 +89,10 @@ jobs:
       - name: Push changes
         run: |          
           # Determine the correct branch
-          BRANCH_NAME=$(git symbolic-ref --short HEAD || echo ${{ github.event.workflow_run.head_branch }})
-          echo "Pushing changes to branch: $BRANCH_NAME"
+          CURRENT_BRANCH=$(git symbolic-ref --short HEAD || echo ${{ github.event.workflow_run.head_branch }})
+          echo "Pushing changes to branch: $CURRENT_BRANCH"
 
-          git push origin "$BRANCH_NAME" || echo "Nothing to push"
+          git push origin "$CURRENT_BRANCH" || echo "Nothing to push"
 
       # 8. Create GitHub Release
       - name: Create GitHub Release
