--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -26,13 +26,36 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
+      # Configure branch
+      - name: Determine the correct branch
+        run: |
+          # Determine the correct branch
+          BRANCH_NAME=$(git symbolic-ref --short HEAD || echo ${{ github.head_ref }})
+          if [[ -z "$BRANCH_NAME" ]]; then
+          echo "Unable to determine branch name. Exiting."
+          exit 1
+          fi
+          echo "Detected branch: $BRANCH_NAME"
+          
+          # Fetch the latest changes from the remote repository
+          git fetch origin
+          git reset --hard origin/"$BRANCH_NAME"
+          
+          git checkout "$BRANCH_NAME"
+          git pull origin "$BRANCH_NAME" || echo "Branch is already up-to-date."
+          
+          # Extract branch name as CURRENT_BRANCH
+          echo "CURRENT_BRANCH=$BRANCH_NAME" >> $GITHUB_ENV
+
       # 3. Grant execute permission to gradlew
       - name: Grant execute permission to gradlew
         run: chmod +x ./gradlew
 
       # 4. Run Gradle Build
-      - name: Run Gradle build
-        run: ./gradlew clean build
+      #- name: Run Gradle build
+      #  run: |
+          # Build project
+      #    ./gradlew clean build
 
       # 5. Increment versionCode and versionName (Only after a successful build)
       - name: Increment Version Code and Name
@@ -45,10 +68,6 @@ jobs:
           echo "Files staged for commit:"
           git status --short
           git commit -m "Increment versionCode and versionName"
-          
-          # Determine the correct branch
-          BRANCH_NAME=$(git symbolic-ref --short HEAD || echo ${{ github.event.workflow_run.head_branch }})
-          echo "Pushing changes to branch: $BRANCH_NAME"
 
           git push origin "$BRANCH_NAME" || echo "No changes to push"
 
@@ -64,20 +83,6 @@ jobs:
       - name: Update Badge
         if: always() # We make sure it always runs, even in case of workflow error
         run: |
-          # Determine the correct branch
-          BRANCH_NAME=$(git symbolic-ref --short HEAD || echo ${{ github.head_ref }})
-          if [[ -z "$BRANCH_NAME" ]]; then
-            echo "Unable to determine branch name. Exiting."
-            exit 1
-          fi
-          echo "Detected branch: $BRANCH_NAME"
-          
-          # Fetch the latest changes from the remote repository
-          git fetch origin
-          
-          git checkout "$BRANCH_NAME"
-          git pull origin "$BRANCH_NAME" || echo "Branch is already up-to-date."
-          
           if [[ "${{ job.status }}" == "success" ]]; then
             sed -i "s|!\[STATUS\](.*)|![STATUS](https://img.shields.io/badge/Status-Working-25d812)|" README.md
           else
