--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Create Git Tag
         id: create_tag
         run: |
-          TAG_NAME="v${VERSION_NAME}
+          TAG_NAME="v${VERSION_NAME}"
           if [[ "${CURRENT_BRANCH}" == "develop" ]]; then
               TAG_NAME="v${VERSION_NAME}_Beta"
           fi
